# AetheriumBloom

./: .gitignore  BUILDING.md  Cargo.toml  EPILEPSY.md  GDD-AetheriumBloom.md  PHASE3_SUMMARY.md  README.md  USER_GUIDE.md  development-plan-part2.md  development-plan.md  implementation.md  issues.md  sanity.md
src/: architecture-guide.md  lib.rs  main.rs  simple.rs  simple_shader.wgsl
src/audio/: consciousness.rs  effects.rs  environment.rs  mod.rs  safety.rs  synthesis.rs
src/communication/: emergent_language.rs  mod.rs
src/consciousness/: crystals.rs  llama.rs  mod.rs
src/core/: ecs.rs  events.rs  memory.rs  mod.rs  safety.rs  time.rs  warning.rs
src/engine/: chaos_engine.rs  event_system.rs  mod.rs  safety.rs
src/entities/: llama.rs  llama_behavior.rs  mod.rs  species.rs
src/input/: consciousness.rs  mod.rs  resonance.rs
src/mathematics/: beat_engine.rs  dimensions.rs  mod.rs  physics.rs  resonance.rs
src/reality/: buffer_manager.rs  buffer_test.rs  chaos.rs  colors.rs  fractals.rs  mod.rs  renderer.rs
src/reality/shaders/: psychedelic.wgsl
src/rendering/: effects.rs  mod.rs  uniforms.rs
src/simulation/: consciousness_systems.rs  meta_consciousness.rs  mod.rs
src/user/: co_evolution.rs  mod.rs
