[package]
name = "aetherium_bloom"
version = "0.1.0"
edition = "2021"
authors = ["AetheriumBloom Team"]
description = "A psychedelic digital organism - chaos engine prototype"

[dependencies]
# Graphics & Rendering
wgpu = "0.20"
winit = "0.30"
glam = { version = "0.24", features = ["serde"] }
bytemuck = { version = "1.14", features = ["derive"] }

# Mathematics & Chaos
noise = "0.8"
primes = "0.3"
rustfft = "6.1"
rand = "0.8"
fastrand = "2.0"

# Performance & Threading
rayon = "1.7"
parking_lot = "0.12"

# Audio (for mathematical harmonics)
cpal = "0.15"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pollster = "0.3"

# Time & Events
instant = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true

[[bin]]
name = "aetherium_bloom"
path = "src/main.rs"